--- a/css/style.css
+++ b/css/style.css
@@ -67,10 +67,10 @@ h1 {
     margin: 0 1rem;
     text-align: center;
 }
-
+/*
 h1::before {
     content: "🐹 ";
-}
+}*/
 
 /* h2, h3{
     display: none
